deploy: e1f9c0d4293ddf52bfd53d7dd06514c517efa616

--- a/program-info/current/certification-credit.html
+++ b/program-info/current/certification-credit.html
@@ -71,6 +71,9 @@
     <a class="nav-link" href="facstaff">Meet the Faculty and Staff</a>
   </li>
   <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="degrees-certificates">Degrees and Certificates</a>
+  </li>
+  <li class="nav-item" data-depth="2">
     <a class="nav-link" href="degree-course-sequencing">Degree Course Sequencing</a>
   </li>
   <li class="nav-item" data-depth="2">
@@ -307,7 +310,7 @@
 </tbody>
 </table>
 <div class="paragraph">
-<p>Document Build Time: 2022-01-23 20:24:42 UTC<br>
+<p>Document Build Time: 2022-02-09 22:30:48 UTC<br>
 Page Version: 2022.01</p>
 </div>
 </article>
