--- a/program-info/current/index.html
+++ b/program-info/current/index.html
@@ -71,6 +71,9 @@
     <a class="nav-link" href="facstaff">Meet the Faculty and Staff</a>
   </li>
   <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="degrees-certificates">Degrees and Certificates</a>
+  </li>
+  <li class="nav-item" data-depth="2">
     <a class="nav-link" href="degree-course-sequencing">Degree Course Sequencing</a>
   </li>
   <li class="nav-item" data-depth="2">
