deploy: 9b2f6a97db714d3856bd7bc35b7bc9e6ca4e2a81

--- a/program-info/current/degrees-certificates.html
+++ b/program-info/current/degrees-certificates.html
@@ -175,7 +175,7 @@
 <i class="fa icon-warning" title="Warning"></i>
 </td>
 <td class="content">
-<div class="title">Important Note</div>
+<div class="title">Course Order</div>
 <div class="paragraph">
 <p>Many of the courses in ITC degree programs have prerequisites which effectively limit the number of technical courses which can be take in any one semester. In order to ensure timely graduation, appropriate course loads, and the correct mix of technical and liberal arts courses students are strongly encouraged to meet with an academic advisor, counselor, and having that plan reviewed by a faculty member from the ITC department before registering for classes to determine a degree plan. You can also  <a href="degree-course-sequencing" class="xref page">review a suggested course sequence online</a> to give you a starting point.</p>
 </div>
