deploy: 47650f2bfbafd7431e30793c5fad9e9f3af5c554

--- a/program-info/current/certification-credit.html
+++ b/program-info/current/certification-credit.html
@@ -310,8 +310,10 @@
 </tbody>
 </table>
 <div class="paragraph">
-<p>Document Build Time: 2022-02-10 00:48:39 UTC<br>
-Page Version: 2022.01</p>
+<p>Document Build Time: 2022-02-10 02:12:47 UTC<br>
+Page Version: 2022.01<br>
+image::https://i.creativecommons.org/l/by-sa/4.0/88x31.png[Creative Commons License]<br>
+This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
 </div>
 </article>
   </div>
