--- a/program-info/current/certification-credit.html
+++ b/program-info/current/certification-credit.html
@@ -310,9 +310,9 @@
 </tbody>
 </table>
 <div class="paragraph">
-<p>Document Build Time: 2022-02-10 02:12:47 UTC<br>
+<p>Document Build Time: 2022-02-10 02:25:23 UTC<br>
 Page Version: 2022.01<br>
-image::https://i.creativecommons.org/l/by-sa/4.0/88x31.png[Creative Commons License]<br>
+image::CCYSA.png[Creative Commons License]<br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
 </div>
 </article>
