--- a/franske-courses/current/itc-2480/schedule.html
+++ b/franske-courses/current/itc-2480/schedule.html
@@ -507,7 +507,7 @@
 </ul>
 </div>
 <div class="paragraph">
-<p>Document Build Time: 2022-02-10 02:34:50 UTC<br>
+<p>Document Build Time: 2022-02-09 20:40:00 -0600<br>
 Page Version: 2022.01</p>
 </div>
 </div>
