--- a/program-info/current/certification-credit.html
+++ b/program-info/current/certification-credit.html
@@ -310,7 +310,7 @@
 </tbody>
 </table>
 <div class="paragraph">
-<p>Document Build Time: 2022-02-10 02:34:50 UTC<br>
+<p>Document Build Time: 2022-02-09 20:40:00 -0600<br>
 Page Version: 2022.01<br>
 image::program-info:ROOT:CCYSA.png[Creative Commons License]<br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
