--- a/program-info/current/degrees-certificates.html
+++ b/program-info/current/degrees-certificates.html
@@ -159,6 +159,13 @@
 </aside>
 <article class="doc">
 <h1 class="page">Degrees and Certificates</h1>
+<div id="preamble">
+<div class="sectionbody">
+<div class="paragraph">
+<p>Like most IT departments Inver Hills Community College divides offerings related to computers into two broad areas (though there is some crossover), information technology infrastructure and programming. There are two degrees and six certificates in the information technology infrastructure area and two degrees in the programming area. Networking, Internet access, server administration, hardware, operating systems, and PCs tend to fall in the information technology infrastructure area. Writing software, apps, sofware design, and algorithms tend to fall into the computer science/programming area.</p>
+</div>
+</div>
+</div>
 <div class="sect1">
 <h2 id="_information_technology_infrastructure"><a class="anchor" href="#_information_technology_infrastructure"></a>Information Technology Infrastructure</h2>
 <div class="sectionbody">
@@ -291,6 +298,18 @@
 <h3 id="_aas_computer_programmer_60_credits"><a class="anchor" href="#_aas_computer_programmer_60_credits"></a>AAS Computer Programmer – 60 credits</h3>
 <div class="paragraph">
 <p><strong>Official Description:</strong> Graduates of this program are well-prepared in software programming and software engineering abilities to help execute a wide variety of information technology projects.</p>
+</div>
+<div class="paragraph">
+<p>Document Build Time: 2022-02-09 20:41:06 -0600<br>
+Page Version: 2022.01</p>
+</div>
+<div class="imageblock unresolved">
+<div class="content">
+<img src="program-info:ROOT:CCYSA.png" alt="Creative Commons License">
+</div>
+</div>
+<div class="paragraph">
+<p>This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
 </div>
 </div>
 </div>
