--- a/program-info/current/certification-credit.html
+++ b/program-info/current/certification-credit.html
@@ -310,12 +310,12 @@
 </tbody>
 </table>
 <div class="paragraph">
-<p>Document Build Time: 2022-02-10 10:43:24 -0600<br>
+<p>Document Build Time: 2022-02-10 10:44:29 -0600<br>
 Page Version: 2022.01</p>
 </div>
-<div class="imageblock unresolved">
+<div class="imageblock">
 <div class="content">
-<img src="program-info:ROOT:CCYSA.png" alt="Creative Commons License">
+<img src="_images/CCBYSA.png" alt="Creative Commons License">
 </div>
 </div>
 <div class="paragraph">
