--- a/program-info/current/degrees-certificates.html
+++ b/program-info/current/degrees-certificates.html
@@ -300,12 +300,12 @@
 <p><strong>Official Description:</strong> Graduates of this program are well-prepared in software programming and software engineering abilities to help execute a wide variety of information technology projects.</p>
 </div>
 <div class="paragraph">
-<p>Document Build Time: 2022-02-10 10:43:24 -0600<br>
+<p>Document Build Time: 2022-02-10 10:44:29 -0600<br>
 Page Version: 2022.01</p>
 </div>
-<div class="imageblock unresolved">
+<div class="imageblock">
 <div class="content">
-<img src="program-info:ROOT:CCYSA.png" alt="Creative Commons License">
+<img src="_images/CCBYSA.png" alt="Creative Commons License">
 </div>
 </div>
 <div class="paragraph">
