--- a/program-info/current/degrees-certificates.html
+++ b/program-info/current/degrees-certificates.html
@@ -299,17 +299,12 @@
 <div class="paragraph">
 <p><strong>Official Description:</strong> Graduates of this program are well-prepared in software programming and software engineering abilities to help execute a wide variety of information technology projects.</p>
 </div>
+<hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-02-10 10:44:29 -0600<br>
-Page Version: 2022.01</p>
-</div>
-<div class="imageblock">
-<div class="content">
-<img src="_images/CCBYSA.png" alt="Creative Commons License">
-</div>
-</div>
-<div class="paragraph">
-<p>This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
+<p>Document Build Time: 2022-02-10 10:54:10 -0600<br>
+Page Version: 2022.01<br>
+<span class="image"><img src="_images/CCBYSA.png" alt="Creative Commons License"></span><br>
+This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
 </div>
 </div>
 </div>
