--- a/program-info/current/degrees-certificates.html
+++ b/program-info/current/degrees-certificates.html
@@ -165,7 +165,7 @@
 <p>Like most IT departments Inver Hills Community College divides offerings related to computers into two broad areas (though there is some crossover), information technology infrastructure and computer science or programming. There are two degrees and six certificates in the information technology infrastructure area and two degrees in the programming area. Networking, Internet access, server administration, hardware, operating systems, and PCs tend to fall in the information technology infrastructure area. Writing software, apps, sofware design, and algorithms tend to fall into the computer science/programming area.</p>
 </div>
 <div class="paragraph">
-<p>Before making a decision on what specific certificate or degree you want to pursue you&#8217;ll want to figure out whether the broad area of IT Infrastructure or Computer Science is more interesting to you.</p>
+<p>Before making a decision on what specific certificate or degree you want to pursue you&#8217;ll want to figure out whether the broad area of IT Infrastructure or Computer Science is more interesting to you. In addition to the information on this page <a href="_attachments/IT_CS.pdf" class="xref attachment">this handout provides a comparison of the two areas</a>.</p>
 </div>
 </div>
 </div>
@@ -287,7 +287,7 @@
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-02-10 11:32:47 -0600<br>
+<p>Document Build Time: 2022-02-10 12:44:41 -0600<br>
 Page Version: 2022.01<br>
 <span class="image"><img src="_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
