--- a/franske-courses/current/itc-2480/assignments.html
+++ b/franske-courses/current/itc-2480/assignments.html
@@ -209,9 +209,12 @@
 <div class="paragraph">
 <p>The Skills Final Exam is designed to test your ability to apply the concepts learned in this class and practiced in labs to common, real-world scenarios. You will start with an empty virtual machine and need to install Linux as well as perform many of the tasks practiced in lab acitivites though in slightly different ways or with different settings.</p>
 </div>
+<hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-02-10 12:44:41 -0600<br>
-Page Version: 2022.01</p>
+<p>Document Build Time: 2022-02-10 14:06:44 -0600<br>
+Page Version: 2022.01<br>
+<span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
+This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
 </div>
 </div>
 </div>
