--- a/franske-courses/current/itc-2480/syllabus.html
+++ b/franske-courses/current/itc-2480/syllabus.html
@@ -638,9 +638,12 @@ Students should not rely on extra credit to boost their grade and should instead
 <div class="paragraph">
 <p>The instructor reserves the right to modify and adjust this syllabus as needed during the course of this class. The most up to date version will always be available on the course website or from the instructor.</p>
 </div>
+<hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-02-10 12:44:41 -0600<br>
-Page Version: 2022.01</p>
+<p>Document Build Time: 2022-02-10 14:06:44 -0600<br>
+Page Version: 2022.01<br>
+<span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
+This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
 </div>
 </div>
 </div>
