--- a/franske-courses/current/itc-2480/index.html
+++ b/franske-courses/current/itc-2480/index.html
@@ -167,6 +167,13 @@
 <div class="paragraph">
 <p>Welcome to my new page!</p>
 </div>
+<hr>
+<div class="paragraph">
+<p>Document Build Time: 2022-02-10 14:06:44 -0600<br>
+Page Version: 2022.01<br>
+<span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
+This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
+</div>
 </article>
   </div>
 </main>
