--- a/program-info/current/certification-info.html
+++ b/program-info/current/certification-info.html
@@ -404,6 +404,13 @@
 </li>
 </ol>
 </div>
+<hr>
+<div class="paragraph">
+<p>Document Build Time: 2022-02-10 14:06:44 -0600<br>
+Page Version: 2022.01<br>
+<span class="image"><img src="_images/CCBYSA.png" alt="Creative Commons License"></span><br>
+This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
+</div>
 </div>
 </div>
 </div>
