--- a/program-info/current/facstaff.html
+++ b/program-info/current/facstaff.html
@@ -199,6 +199,13 @@ Phone: 651-450-3460</p>
 <div class="paragraph">
 <p>Tom is our departmental lab assistant. Contact him to schedule time outside of class to work on labs and for inquiries about equipment or software.</p>
 </div>
+<hr>
+<div class="paragraph">
+<p>Document Build Time: 2022-02-10 14:06:44 -0600<br>
+Page Version: 2022.01<br>
+<span class="image"><img src="_images/CCBYSA.png" alt="Creative Commons License"></span><br>
+This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
+</div>
 </div>
 </div>
 </div>
