--- a/program-info/current/degrees-certificates.html
+++ b/program-info/current/degrees-certificates.html
@@ -93,6 +93,9 @@
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="../../software-info/current/">Software Discounts and Resources</a>
   </li>
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="../../tech-info/current/about-site">About This Site</a>
+  </li>
 </ul>
   </li>
 </ul>
@@ -287,7 +290,7 @@
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-02-10 14:06:44 -0600<br>
+<p>Document Build Time: 2022-02-10 17:13:08 -0600<br>
 Page Version: 2022.01<br>
 <span class="image"><img src="_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
