deploy: 3749d17f80c4ff76e656fc9ba50db21c176883af

--- a/franske-courses/current/index.html
+++ b/franske-courses/current/index.html
@@ -157,7 +157,7 @@
     <li><a href="./">Dr. Franske&#8217;s Course Pages</a></li>
   </ul>
 </nav>
-  <div class="edit-this-page"><a href="https://github.com/bfranske/ihitc-docs/edit/main/franske-course-information/modules/ROOT/pages/index.adoc">Edit this Page</a></div>
+  <div class="edit-this-page"><a href="https://github.com/bfranske/ihitc-docs/edit/2022.01/franske-course-information/modules/ROOT/pages/index.adoc">Edit this Page</a></div>
   </div>
   <div class="content">
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
@@ -170,7 +170,7 @@
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-02-10 17:13:08 -0600<br>
+<p>Document Build Time: 2022-02-10 18:11:13 -0600<br>
 Page Version: 2022.01<br>
 <span class="image"><img src="../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
