--- a/franske-courses/current/itc-2480/syllabus.html
+++ b/franske-courses/current/itc-2480/syllabus.html
@@ -159,7 +159,7 @@
     <li><a href="syllabus">Syllabus</a></li>
   </ul>
 </nav>
-  <div class="edit-this-page"><a href="https://github.com/bfranske/ihitc-docs/edit/main/franske-course-information/modules/itc-2480/pages/syllabus.adoc">Edit this Page</a></div>
+  <div class="edit-this-page"><a href="https://github.com/bfranske/ihitc-docs/edit/2022.01/franske-course-information/modules/itc-2480/pages/syllabus.adoc">Edit this Page</a></div>
   </div>
   <div class="content">
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
@@ -643,7 +643,7 @@ Students should not rely on extra credit to boost their grade and should instead
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-02-10 17:13:08 -0600<br>
+<p>Document Build Time: 2022-02-10 18:11:13 -0600<br>
 Page Version: 2022.01<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
