--- a/program-info/current/certification-credit.html
+++ b/program-info/current/certification-credit.html
@@ -154,7 +154,7 @@
     <li><a href="certification-credit">ITC Course Credit Equivalency for IT Exams</a></li>
   </ul>
 </nav>
-  <div class="edit-this-page"><a href="https://github.com/bfranske/ihitc-docs/edit/main/program-information/modules/ROOT/pages/certification-credit.adoc">Edit this Page</a></div>
+  <div class="edit-this-page"><a href="https://github.com/bfranske/ihitc-docs/edit/2022.01/program-information/modules/ROOT/pages/certification-credit.adoc">Edit this Page</a></div>
   </div>
   <div class="content">
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
@@ -314,7 +314,7 @@
 </table>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-02-10 17:13:08 -0600<br>
+<p>Document Build Time: 2022-02-10 18:11:13 -0600<br>
 Page Version: 2022.01<br>
 <span class="image"><img src="_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
