--- a/tech-info/current/about-site.html
+++ b/tech-info/current/about-site.html
@@ -142,7 +142,7 @@
     <li><a href="about-site">About This Site</a></li>
   </ul>
 </nav>
-  <div class="edit-this-page"><a href="https://github.com/bfranske/ihitc-docs/edit/main/technical-information/modules/ROOT/pages/about-site.adoc">Edit this Page</a></div>
+  <div class="edit-this-page"><a href="https://github.com/bfranske/ihitc-docs/edit/2022.01/technical-information/modules/ROOT/pages/about-site.adoc">Edit this Page</a></div>
   </div>
   <div class="content">
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
@@ -236,7 +236,7 @@ git commit -m "a short explanation of what has been changed"</code></pre>
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-02-10 17:13:08 -0600<br>
+<p>Document Build Time: 2022-02-10 18:11:13 -0600<br>
 Page Version: 2022.01<br>
 <span class="image"><img src="../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
