--- a/tech-info/current/about-site.html
+++ b/tech-info/current/about-site.html
@@ -164,7 +164,7 @@
 <p>The site is comprised of static pages hosted on GitHub pages which are generated programmatically from <a href="https://docs.asciidoctor.org/asciidoc/latest/">AsciiDoc</a> files using the <a href="https://docs.antora.org/antora/latest/">Antora</a> site generator. The complete source code for the site can be found in the <a href="https://github.com/bfranske/ihitc-docs">itc-docs GitHub repository</a>.</p>
 </div>
 <div class="paragraph">
-<p>A GitHub workflow exists which automatically runs the <a href="https://docs.antora.org/antora/latest/">Antora</a> site generator and then deploys the site to GitHub pages each time a push to the main branch is made. The code for this workflow <a href="https://github.com/bfranske/ihitc-docs/blob/main/.github/workflows/publish.yml">is also in the same repository</a>.</p>
+<p>A GitHub workflow exists which automatically runs the <a href="https://docs.antora.org/antora/latest/">Antora</a> site generator and then deploys the site to GitHub pages each time a push to any YYYY.MM branch is made. The code for this workflow <a href="https://github.com/bfranske/ihitc-docs/blob/main/.github/workflows/publish.yml">is also in the same repository</a>.</p>
 </div>
 </div>
 </div>
@@ -175,7 +175,7 @@
 <p>If you do not have commit access to the <a href="https://github.com/bfranske/ihitc-docs">itc-docs repository</a> you will need to fork the repository on GitHub, download a copy, edit the files, upload to your forked repository, and then submit a <a href="https://github.com/bfranske/ihitc-docs/pulls">pull request</a>. It is strongly suggested that you setup the same Antora build workflow on your forked repository or run Antora locally to build and test your edits before submitting the pull request.</p>
 </div>
 <div class="paragraph">
-<p>If you do have commit access to the <a href="https://github.com/bfranske/ihitc-docs">itc-docs repository</a> you can update your local branch, make changes, commit, and push to GitHub as you would with any normal source repository.</p>
+<p>If you do have commit access to the <a href="https://github.com/bfranske/ihitc-docs">itc-docs repository</a> you can update your local copy, make changes, commit, and push to GitHub as you would with any normal source repository.</p>
 </div>
 <div class="listingblock">
 <div class="title">Update your local branch</div>
@@ -194,6 +194,35 @@ git commit -m "a short explanation of what has been changed"</code></pre>
 <div class="title">Upload changes to the remote repository (assuming you have commit permission there)</div>
 <div class="content">
 <pre class="highlightjs highlight"><code class="language-bash hljs" data-lang="bash">git push</code></pre>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_site_versioning"><a class="anchor" href="#_site_versioning"></a>Site Versioning</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Antora is setup to automatically build multiple versions of the site based on the branches in Git that are identified by a branch name like YYYY.MM. The idea is that a new branch will be created from the main branch at the beginning of each semester in the YYYY.MM format. This branch will be used for changes made during that semester. At the end of the semester the changes will be merged back into the main branch. That way the final version of the site each semester will continue to be available as the latest commit of each branch. The YYYY.MM format was chosen as they will sort correctly to find the latest branch. For example at the beginning of Fall 2022 a branch 2022.08 will be created and at the beginning of Spring 2023 a branch 2023.01 will be created.</p>
+</div>
+<div class="listingblock">
+<div class="title">Create a branch at the beginning of the semester and switch to that branch</div>
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-bash hljs" data-lang="bash">git pull
+git checkout -b "YYYY.MM"</code></pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Upload changes to the new branch the first time by specifying it</div>
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-bash hljs" data-lang="bash">git push --set-upstream origin YYYY.MM</code></pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">At the end of the semester merge changes back into the main branch and upload it</div>
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-bash hljs" data-lang="bash">git checkout main
+git merge YYYY.MM
+git push</code></pre>
 </div>
 </div>
 </div>
@@ -236,7 +265,7 @@ git commit -m "a short explanation of what has been changed"</code></pre>
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-02-10 18:11:13 -0600<br>
+<p>Document Build Time: 2022-02-10 18:30:05 -0600<br>
 Page Version: 2022.01<br>
 <span class="image"><img src="../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
