deploy: b82efd07c99ead7373c44eadc851db370a6a4b89

--- a/404.html
+++ b/404.html
@@ -62,7 +62,10 @@
       <a class="title" href="/ihitc-docs/franske-courses/current/">Dr. Franske's Course Pages</a>
       <ul class="versions">
         <li class="version is-latest">
-          <a href="/ihitc-docs/franske-courses/current/">2022.01</a>
+          <a href="/ihitc-docs/franske-courses/current/">2022.08</a>
+        </li>
+        <li class="version">
+          <a href="/ihitc-docs/franske-courses/2022.01/">2022.01</a>
         </li>
       </ul>
     </li>
@@ -70,7 +73,10 @@
       <a class="title" href="/ihitc-docs/program-info/current/">Program Information</a>
       <ul class="versions">
         <li class="version is-latest">
-          <a href="/ihitc-docs/program-info/current/">2022.01</a>
+          <a href="/ihitc-docs/program-info/current/">2022.08</a>
+        </li>
+        <li class="version">
+          <a href="/ihitc-docs/program-info/2022.01/">2022.01</a>
         </li>
       </ul>
     </li>
@@ -78,7 +84,10 @@
       <a class="title" href="/ihitc-docs/software-info/current/">Software Information</a>
       <ul class="versions">
         <li class="version is-latest">
-          <a href="/ihitc-docs/software-info/current/">2022.01</a>
+          <a href="/ihitc-docs/software-info/current/">2022.08</a>
+        </li>
+        <li class="version">
+          <a href="/ihitc-docs/software-info/2022.01/">2022.01</a>
         </li>
       </ul>
     </li>
@@ -86,7 +95,10 @@
       <a class="title" href="/ihitc-docs/tech-info/current/">Technical Information</a>
       <ul class="versions">
         <li class="version is-latest">
-          <a href="/ihitc-docs/tech-info/current/">2022.01</a>
+          <a href="/ihitc-docs/tech-info/current/">2022.08</a>
+        </li>
+        <li class="version">
+          <a href="/ihitc-docs/tech-info/2022.01/">2022.01</a>
         </li>
       </ul>
     </li>
