--- a/franske-courses/current/index.html
+++ b/franske-courses/current/index.html
@@ -54,7 +54,7 @@
   </nav>
 </header>
 <div class="body">
-<div class="nav-container" data-component="franske-courses" data-version="2022.01">
+<div class="nav-container" data-component="franske-courses" data-version="2022.08">
   <aside class="nav">
     <div class="panels">
 <div class="nav-panel-menu is-active" data-panel="menu">
@@ -72,6 +72,24 @@
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
     <button class="nav-item-toggle"></button>
+    <span class="nav-text">ITC-2300</span>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="itc-2300/">Course Home</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="itc-2300/syllabus">Syllabus</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="itc-2300/schedule">Schedule</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="itc-2300/assignments">Assignments</a>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <button class="nav-item-toggle"></button>
     <span class="nav-text">ITC-2480</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="3">
@@ -85,6 +103,42 @@
   </li>
   <li class="nav-item" data-depth="3">
     <a class="nav-link" href="itc-2480/assignments">Assignments</a>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <button class="nav-item-toggle"></button>
+    <span class="nav-text">ITC-2516</span>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="itc-2516/">Course Home</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="itc-2516/syllabus">Syllabus</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="itc-2516/schedule">Schedule</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="itc-2516/assignments">Assignments</a>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <button class="nav-item-toggle"></button>
+    <span class="nav-text">ITC-2611</span>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="itc-2611/">Course Home</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="itc-2611/syllabus">Syllabus</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="itc-2611/schedule">Schedule</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="itc-2611/assignments">Assignments</a>
   </li>
 </ul>
   </li>
@@ -107,14 +161,17 @@
 <div class="nav-panel-explore" data-panel="explore">
   <div class="context">
     <span class="title">Dr. Franske&#x27;s Course Pages</span>
-    <span class="version">2022.01</span>
+    <span class="version">2022.08</span>
   </div>
   <ul class="components">
     <li class="component is-current">
       <a class="title" href="./">Dr. Franske's Course Pages</a>
       <ul class="versions">
         <li class="version is-current is-latest">
-          <a href="./">2022.01</a>
+          <a href="./">2022.08</a>
+        </li>
+        <li class="version">
+          <a href="../2022.01/">2022.01</a>
         </li>
       </ul>
     </li>
@@ -122,7 +179,10 @@
       <a class="title" href="../../program-info/current/">Program Information</a>
       <ul class="versions">
         <li class="version is-latest">
-          <a href="../../program-info/current/">2022.01</a>
+          <a href="../../program-info/current/">2022.08</a>
+        </li>
+        <li class="version">
+          <a href="../../program-info/2022.01/">2022.01</a>
         </li>
       </ul>
     </li>
@@ -130,7 +190,10 @@
       <a class="title" href="../../software-info/current/">Software Information</a>
       <ul class="versions">
         <li class="version is-latest">
-          <a href="../../software-info/current/">2022.01</a>
+          <a href="../../software-info/current/">2022.08</a>
+        </li>
+        <li class="version">
+          <a href="../../software-info/2022.01/">2022.01</a>
         </li>
       </ul>
     </li>
@@ -138,7 +201,10 @@
       <a class="title" href="../../tech-info/current/">Technical Information</a>
       <ul class="versions">
         <li class="version is-latest">
-          <a href="../../tech-info/current/">2022.01</a>
+          <a href="../../tech-info/current/">2022.08</a>
+        </li>
+        <li class="version">
+          <a href="../../tech-info/2022.01/">2022.01</a>
         </li>
       </ul>
     </li>
@@ -157,7 +223,14 @@
     <li><a href="./">Dr. Franske&#8217;s Course Pages</a></li>
   </ul>
 </nav>
-  <div class="edit-this-page"><a href="https://github.com/bfranske/ihitc-docs/edit/2022.01/franske-course-information/modules/ROOT/pages/index.adoc">Edit this Page</a></div>
+<div class="page-versions">
+  <button class="version-menu-toggle" title="Show other versions of page">2022.08</button>
+  <div class="version-menu">
+    <a class="version is-current" href="./">2022.08</a>
+    <a class="version" href="../2022.01/">2022.01</a>
+  </div>
+</div>
+  <div class="edit-this-page"><a href="https://github.com/bfranske/ihitc-docs/edit/2022.08/franske-course-information/modules/ROOT/pages/index.adoc">Edit this Page</a></div>
   </div>
   <div class="content">
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
@@ -170,8 +243,8 @@
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-02-10 18:30:05 -0600<br>
-Page Version: 2022.01<br>
+<p>Document Build Time: 2022-08-16 18:45:24 -0500<br>
+Page Version: 2022.08<br>
 <span class="image"><img src="../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
 </div>
