--- a/program-info/current/certification-credit.html
+++ b/program-info/current/certification-credit.html
@@ -54,7 +54,7 @@
   </nav>
 </header>
 <div class="body">
-<div class="nav-container" data-component="program-info" data-version="2022.01">
+<div class="nav-container" data-component="program-info" data-version="2022.08">
   <aside class="nav">
     <div class="panels">
 <div class="nav-panel-menu is-active" data-panel="menu">
@@ -104,14 +104,17 @@
 <div class="nav-panel-explore" data-panel="explore">
   <div class="context">
     <span class="title">Program Information</span>
-    <span class="version">2022.01</span>
+    <span class="version">2022.08</span>
   </div>
   <ul class="components">
     <li class="component">
       <a class="title" href="../../franske-courses/current/">Dr. Franske's Course Pages</a>
       <ul class="versions">
         <li class="version is-latest">
-          <a href="../../franske-courses/current/">2022.01</a>
+          <a href="../../franske-courses/current/">2022.08</a>
+        </li>
+        <li class="version">
+          <a href="../../franske-courses/2022.01/">2022.01</a>
         </li>
       </ul>
     </li>
@@ -119,7 +122,10 @@
       <a class="title" href="./">Program Information</a>
       <ul class="versions">
         <li class="version is-current is-latest">
-          <a href="./">2022.01</a>
+          <a href="./">2022.08</a>
+        </li>
+        <li class="version">
+          <a href="../2022.01/">2022.01</a>
         </li>
       </ul>
     </li>
@@ -127,7 +133,10 @@
       <a class="title" href="../../software-info/current/">Software Information</a>
       <ul class="versions">
         <li class="version is-latest">
-          <a href="../../software-info/current/">2022.01</a>
+          <a href="../../software-info/current/">2022.08</a>
+        </li>
+        <li class="version">
+          <a href="../../software-info/2022.01/">2022.01</a>
         </li>
       </ul>
     </li>
@@ -135,7 +144,10 @@
       <a class="title" href="../../tech-info/current/">Technical Information</a>
       <ul class="versions">
         <li class="version is-latest">
-          <a href="../../tech-info/current/">2022.01</a>
+          <a href="../../tech-info/current/">2022.08</a>
+        </li>
+        <li class="version">
+          <a href="../../tech-info/2022.01/">2022.01</a>
         </li>
       </ul>
     </li>
@@ -154,7 +166,14 @@
     <li><a href="certification-credit">ITC Course Credit Equivalency for IT Exams</a></li>
   </ul>
 </nav>
-  <div class="edit-this-page"><a href="https://github.com/bfranske/ihitc-docs/edit/2022.01/program-information/modules/ROOT/pages/certification-credit.adoc">Edit this Page</a></div>
+<div class="page-versions">
+  <button class="version-menu-toggle" title="Show other versions of page">2022.08</button>
+  <div class="version-menu">
+    <a class="version is-current" href="certification-credit">2022.08</a>
+    <a class="version" href="../2022.01/certification-credit">2022.01</a>
+  </div>
+</div>
+  <div class="edit-this-page"><a href="https://github.com/bfranske/ihitc-docs/edit/2022.08/program-information/modules/ROOT/pages/certification-credit.adoc">Edit this Page</a></div>
   </div>
   <div class="content">
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
@@ -314,8 +333,8 @@
 </table>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-02-10 18:30:05 -0600<br>
-Page Version: 2022.01<br>
+<p>Document Build Time: 2022-08-16 18:45:24 -0500<br>
+Page Version: 2022.08<br>
 <span class="image"><img src="_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
 </div>
